function name updated
